﻿# Change Log
All notable changes to this project will be documented in this file.

## [1.2.0] - 2016-07-10
### Added
- Missing author in assembly information.
- Support for mobile NVIDIA GPUs.
- New argument - "--eraseConfig", erases configuration file.

### Changed
- Minor cleanup and improvements.
- Complete re-write of config system, had a great time doing so and had to be done - old system was wanky. Moved to '.xml' format powered by the .NET framework.
- Now following the Semantic Versioning 2.0.0 standard, http://semver.org/spec/v2.0.0.html.
- Improved update system.
- Improved command line argument handler.

## [1.1.0.0] - 2016-05-31
### Added
- Check for required DLL file.
- Basic documentation.
- Language specific downloads.
- "--debug" command line argument used for debugging purposes.
- "--?" command line argument as help menu.

### Changed
- Major cleanup / improved code.
- Improved command argument system.

## [1.0.0.0] - 2016-05-20
The application is finally in version 1! Everything seems to work fine so I decided to release it as stable.
### Added
- Now using HtmlAgilityPack.
- Get remote version.
- Get remote driver link.

### Changed
- Minor cleanup.
- All GPU driver versions are now integers instead of being both a int and string.

### Fixed
- Icon modified yet again; fixed material design and more.

## [0.2.0.0] - 2016-05-15
### Added
- Added GPLv3 message.
- Added CHANGELOG.
- Added LICENSE.
- Emulate remote version via configuration file.

### Changed
- Renamed MainConsole.cs to mainConsole.cs.
- A lot of cleanup.
- Changes in configuration file; please delete your configuration file after updating.
- New icon as the old one was a registred trademark by NVIDIA Corporation, thanks to https://github.com/Maddoc42/Android-Material-Icon-Generator.

### Fixed
- Windows version detector fixed.
- Fixed using "-quiet" command line argument where application would not end.

## [0.1.0.0] - 2016-05-14 [YANKED]
Initial public release.